# mcp-ankiconnect

./: .gitignore  CLAUDE.md  README.md  ankiconnect.txt  fastmcp.txt  main.py  mcp.txt  pyproject.toml  python-mcp.txt  server_prompts.py
.asana/: 01-todo.md  02-progress.md
docs/superpowers/plans/: 2026-05-11-card-edit-tools.md
docs/superpowers/specs/: 2026-05-11-card-edit-tools-design.md
mcp_ankiconnect/: __init__.py  ankiconnect_client.py  config.py  edit_tools.py  main.py  server.py
src/mcp_ankiconnect/: __init__.py  config.py  server.py  server_prompts.py
tests/: test_ankiconnect.py  test_ankiconnect_client.py  test_edit_tools.py  test_server.py  test_timeouts.py
