[project]
name = "mcp-ankiconnect"
version = "0.1.0"
description = "Connect Claude conversations with AnkiConnect via MCP to make spaced repetition as easy as \"Help me remember this\""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.1.0",
    "pytest-asyncio>=0.24.0",
]
[[project.authors]]
name = "FazMataz"
email = "samefarrar@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.24.0", "pytest-mock>=3.14.0"]

[project.scripts]
mcp-ankiconnect = "mcp_ankiconnect:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
