[project]
name = "mcp_ankiconnect"
version = "0.3.1"
description = "Connect Claude conversations with AnkiConnect via MCP to make spaced repetition as easy as \"Help me remember this\""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]==1.2.0rc1",
    "uvicorn>=0.34.0",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { repository = "https://github.com/samefarrar/mcp-ankiconnect" }

[[project.authors]]
name = "samefarrar"
email = "samefarrar@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.24.0", "pytest-mock>=3.14.0"]

[project.scripts]
mcp-ankiconnect = "mcp_ankiconnect.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_fixture_loop_scope = "function"

[tool.pyright]
venvPath = "."
venv = ".venv"
